Closed Bug 155109 Opened 23 years ago Closed 18 years ago

Save As Complete misplaces data: src

Categories

(Core Graveyard :: File Handling, defect)

x86
All
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: sciguyryan)

References

Details

(Keywords: testcase)

Attachments

(2 files)

Steps to reproduce: 1. Load the testcase. 2. Save As, select "Web Page, complete", and type "a222" as the filename. 3. Load the saved page. Result: the data: url in the iframe src is replaced by <iframe src="a222_files/.html"></iframe> and the iframe src is saved as a222_files/_001.html. Expected: either leave the iframe src as a data: url (preferred) or put the correct filename in the saved source.
Attached file testcase using iframe
Blocks: 144766
QA Contact: sairuh → petersen
Blocks: 115634
OS: Windows XP → All
Attached patch Patch v1Splinter Review
Patch v1. I'll do with what Jesse has said here, don't save the data: URI's. It could contain a HTML document for example but it could equally contain just about anything else. We don't save things like the javascript: URI's so why bother with the data URI's?
Assignee: law → sciguyryan
Status: NEW → ASSIGNED
Attachment #255343 - Flags: review?(bzbarsky)
That's just my opinion. It seems like a lot of worth otherwise. We'll need to take the content type presented and generate a correct file extension and a name for the file is saved. It seems like unnecessary work when we could also claim that javascript URI's could be saved to .js files in the same way.
Comment on attachment 255343 [details] [diff] [review] Patch v1 Sure.
Attachment #255343 - Flags: superreview+
Attachment #255343 - Flags: review?(bzbarsky)
Attachment #255343 - Flags: review+
Whiteboard: [checkin needed]
mozilla/embedding/components/webbrowserpersist/src/nsWebBrowserPersist.cpp 1.123
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Flags: in-testsuite?
Keywords: testcase
Resolution: --- → FIXED
Whiteboard: [checkin needed]
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: