Bug 155109 - Save As Complete misplaces data: src p=Ryan Jones <sciguyryan@gmail.com> r+sr=bzbarsky